[GLIB] Test FileMonitorTest.DetectChangeAndThenDelete sometimes crashes https://bugs.webkit.org/show_bug.cgi?id=179909

Reviewed by Michael Catanzaro.

The problem sems to be that the GFileMonitor is created in the main thread, but destroyed in the WorkQueue
thread. We can create the monitor in the WorkQueue thread and do the monitoring there.

Fixes unit test FileMonitorTest.DetectChangeAndThenDelete.

* platform/glib/FileMonitorGLib.cpp:
(WebCore::FileMonitor::FileMonitor): Create the GFileMonitor in the WorkQueue.
(WebCore::FileMonitor::didChange): No need to dispatch the handler in the WorkQueue, since this is now called in
the WorkQueue.

Canonical link: https://commits.webkit.org/195949@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225081 268f45cc-cd09-0410-ab3c-d52691b4dbfc